# apuracao_eleicoes_2022

./: README.md  pyproject.toml  requirements.txt
src/: eleicoes2.py
