[tool.poetry]
name = "apuracao-eleicoes-2022"
version = "0.1.0"
description = ""
authors = ["Marco André Mendes <marcoandre@gmail.com>"]
readme = "README.md"
packages = [{include = "apuracao_eleicoes_2022"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.0"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
